# moved_maker

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  TOOLING.md  mise.toml
.config/: coverage-threshold-check.jq  deny.toml  nextest.toml  sumi.toml  typos.toml
.cursor/templates/: bug_template.md  implementation_plan_template.md  req_template.md
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: .cursorrules  .gitignore  create-checksum.py
.github/scripts/create-checksum/: README.md  pyproject.toml
.github/scripts/create-checksum/src/create_checksum/: __main__.py  checksum.py
.github/scripts/create-checksum/tests/: conftest.py  test_checksum.py
.github/scripts/pr-labels/: README.md  pyproject.toml
.github/scripts/pr-labels/src/pr_labels/: __init__.py  __main__.py  github_client.py  labeler.py  parser.py
.github/scripts/pr-labels/tests/: __init__.py  conftest.py  test_github_client.py  test_integration.py  test_labeler.py  test_parser.py
.github/scripts/release-notes/: .gitignore  README.md  main.py  pyproject.toml
.github/scripts/release-notes/src/release_notes/: __main__.py  formatter.py  git.py  parser.py
.github/scripts/release-notes/tests/: test_formatter.py  test_git.py  test_parser.py  test_workspace_root.py
.github/scripts/release-version/: pyproject.toml
.github/scripts/release-version/src/release_version/: __init__.py  __main__.py  cargo.py  github_client.py  version.py
.github/scripts/release-version/tests/: __init__.py  conftest.py  test_cargo.py  test_github_client.py  test_version.py
.github/scripts/release-version/tests/test_cargo/: build_metadata.toml  invalid_format.toml  with_v_prefix.toml
.github/workflows/: .cursorrules  cache-build.yaml  codeql.yml  pr-label.yml  pull_request.yaml  release-build.yaml  release-version.yaml  release.yaml
bugs/00_Initial/: INDENTATION.md
examples/: .cursorrules
examples/01_web_application/: data.tf  locals.tf  main.tf  outputs.tf  variables.tf
examples/02_networking/: data.tf  locals.tf  main.tf  outputs.tf  variables.tf
examples/03_kubernetes/: data.tf  locals.tf  main.tf  outputs.tf  variables.tf
examples/04_monitoring/: locals.tf  main.tf  outputs.tf  variables.tf
examples/05_cicd/: locals.tf  main.tf  outputs.tf  variables.tf
examples/06_infrastructure_modules/: main.tf  outputs.tf  variables.tf
examples/07_multi_environment/: locals.tf  main.tf  outputs.tf
examples/08_hybrid_infrastructure/: main.tf  outputs.tf  variables.tf
examples/09_application_stack/: main.tf  outputs.tf  variables.tf
plan/: .cursorrules
plan/00_Initial/: BLOCK_PROCESSING.md  CLI_ARGS.md  COMPONENTS.md  FILE_PARSING.md  IMPLEMENTATION_STEPS.md  OUTPUT_FORMAT.md  PLAN.md  REVIEW_SUMMARY.md  TESTING.md
plan/01_Quality/: CODE_COVERAGE.md  CONTINUOUS_DELIVERY.md  ERROR_HANDLING.md  GITHUB.md  IMPLEMENTATION.md  PRE_COMMIT.md  PRE_COMMIT_HOOKS.md  PRE_COMMIT_HOOK_CONSIDERATION.md  QUALITY_TOOLING.md  REVIEW_ISSUES.md  REVIEW_SUMMARY.md  SECURITY.md  SETUP.md  TEST_RUNNER.md  VERSIONING.md
plan/02_W47/: GITHUB_WORKFLOWS_RUST_CACHE_SHARED_KEY.md  MODULE_BLOCK_SUPPORT.md  REFACTORING_W47.md  RELEASE_BUILD_CROSS_COMPILATION_LINKER_ERROR.md  STREAMING_REFACTOR.md  TYPOS_SPELL_CHECKING.md
plan/03_W48/: ALIGN_CRATE_AND_REPOSITORY.md  CURSORRULES.md  CURSOR_AI_TEMPLATES.md  DEPENDABOT_RELEASE_NOTES.md  REQ_WORK_DOCUMENT_STRUCTURE.md  (+3 more)
src/: .cursorrules  address.rs  cli.rs  file_discovery.rs  main.rs  moved_block.rs  moved_module.rs  moved_resource.rs  output.rs  parser.rs  pipeline.rs  processor.rs  terraform_files.rs  to_moved_block.rs
tests/: .cursorrules  integration_test.rs
work/: .cursorrules
(+303 files in other folders)
