[package]
name = "move_maker"
version = "0.1.8"
rust-version = "1.90.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
hcl-rs = "0.19.4"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"

[profile.release]
strip = "debuginfo"  # Strip debug symbols, preserve custom linker sections (e.g., cargo-auditable data)
