[package]
name = "moved_maker"
version = "0.2.5"
rust-version = "1.90.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/npetzall/moved_maker"
description = "A CLI utility that parses Terraform files and generates moved blocks for refactoring resources into a submodule"
keywords = ["terraform", "refactoring", "moved-blocks", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
hcl-rs = "0.19.4"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"

[lints.rust]
warnings = "deny"

[profile.release]
strip = "debuginfo"  # Strip debug symbols, preserve custom linker sections (e.g., cargo-auditable data)
